[package]
name = "pgpg"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgp = { version = "0.4.0", default-features = false }
anyhow = { version = "1.0.26", default-features = false, features = ["std"] }
petgraph = { version = "0.5.0", default-features = false, features = ["graphmap"] }
hex = "0.4.2"
pretty_env_logger = "0.4.0"
